// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render with nodes and edges 1`] = `
<div
  id="petc-kanvas"
  onClick={[Function]}
>
  <div
    id="a-wrapper"
    style={
      Object {
        "left": 1,
        "position": "absolute",
        "top": 2,
      }
    }
  >
    <div
      className="petc-node"
      id="a"
      onClick={[Function]}
      style={undefined}
    />
    <div
      className="petc-node-label"
      style={
        Object {
          "WebkitTransform": "rotate(-4deg)",
        }
      }
    />
  </div>
  <div
    id="b-wrapper"
    style={
      Object {
        "left": 2,
        "position": "absolute",
        "top": 3,
      }
    }
  >
    <div
      className="petc-node"
      id="b"
      onClick={[Function]}
      style={undefined}
    />
    <div
      className="petc-node-label"
      style={
        Object {
          "WebkitTransform": "rotate(-4deg)",
        }
      }
    />
  </div>
  <div
    id="a-b"
  />
</div>
`;

exports[`renders initial doc 1`] = `
<div
  id="petc-kanvas"
  onClick={[Function]}
/>
`;

exports[`should show node label 1`] = `
<div
  id="petc-kanvas"
  onClick={[Function]}
>
  <div
    id="node-wrapper"
    style={
      Object {
        "left": 10,
        "position": "absolute",
        "top": 20,
      }
    }
  >
    <div
      className="petc-node"
      id="node"
      onClick={[Function]}
      style={undefined}
    />
    <div
      className="petc-node-label"
      style={
        Object {
          "WebkitTransform": "rotate(-4deg)",
        }
      }
    >
      a label
    </div>
  </div>
</div>
`;
